[metadata]
name = ros2_pan_tilt_lidar
version = 0.0.1
description = A ROS2 package for controlling a pan-tilt gimbal and lidar sensor.
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    std_msgs
    matplotlib

[options.entry_points]
console_scripts =
    pan_tilt_lidar_node = pan_tilt_lidar.node_main:main

[options.package_data]
* = *.json, *.yaml, *.launch.py, *.py, *.txt

[options.extras_require]
testing =
    pytest
    pytest-asyncio